adjust inner box padding to try and fix weird overflow issue

--- a/css/app.css
+++ b/css/app.css
@@ -80,34 +80,37 @@ p {
 }
 
 .viewerdisplay {
-    position: fixed;
+    position: absolute;
     margin-left: 4em;
     margin-right: 4em;
     top: 5.5em;
-    padding: 3.5em 0 45.5em;
+    padding: 1em 0 45.5em;
     left: 0;
     right: 0;
+    overflow: hidden;
 }
 
 .viewer {
     display: flex;
     align-items: center;
-    padding-right: 15px;
-    padding-left: 15px;
-    min-height: 150px;
+    padding: 15px;
+    min-height: min-content;
     mix-blend-mode: normal;
     border-radius: 5px;
     z-index: 0;
     background: var(--viewer-colour);
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-evenly;
+    overflow: scroll;
 }
 
 .imagecont {
-    display: flex;
+    position: relative;
     width: 260px;
     height: 280px;
     border-radius: 5px;
+    margin-bottom: 10px;
 }
 
 .image {
